--- a/Enriching Stock Market Data using the OpenAI API/Enriching Stock Market Data using the OpenAI API.ipynb
+++ b/Enriching Stock Market Data using the OpenAI API/Enriching Stock Market Data using the OpenAI API.ipynb
@@ -8,7 +8,7 @@
     "## Enriching stock market data using Open AI API \n",
     "\n",
     "<p align=\"center\">\n",
-    "    <img src=\"images/nasdaq100.png\" width=\"450\">\n",
+    "![nasdaq100](nasdaq100.png)\n",
     "</p>\n",
     "\n",
     "The Nasdaq-100 is a stock market index made up of 101 equity securities issued by 100 of the largest non-financial companies listed on the Nasdaq stock exchange. It helps investors compare stock prices with previous prices to determine market performance.\n",
